Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/h/Core.h


typedef enum {
  LLVMRet            = 1,
  LLVMBr             = 2,
  LLVMSwitch         = 3,
  LLVMIndirectBr     = 4,
  LLVMInvoke         = 5,
  LLVMUnreachable    = 7,
  LLVMCallBr         = 67,
  LLVMFNeg           = 66,
  LLVMAdd            = 8,
  LLVMFAdd           = 9,
  LLVMSub            = 10,
  LLVMFSub           = 11,
  LLVMMul            = 12,
  LLVMFMul           = 13,
  LLVMUDiv           = 14,
  LLVMSDiv           = 15,
  LLVMFDiv           = 16,
  LLVMURem           = 17,
  LLVMSRem           = 18,
  LLVMFRem           = 19,
  LLVMShl            = 20,
  LLVMLShr           = 21,
  LLVMAShr           = 22,
  LLVMAnd            = 23,
  LLVMOr             = 24,
  LLVMXor            = 25,
  LLVMAlloca         = 26,
  LLVMLoad           = 27,
  LLVMStore          = 28,
  LLVMGetElementPtr  = 29,
  LLVMTrunc          = 30,
  LLVMZExt           = 31,
  LLVMSExt           = 32,
  LLVMFPToUI         = 33,
  LLVMFPToSI         = 34,
  LLVMUIToFP         = 35,
  LLVMSIToFP         = 36,
  LLVMFPTrunc        = 37,
  LLVMFPExt          = 38,
  LLVMPtrToInt       = 39,
  LLVMIntToPtr       = 40,
  LLVMBitCast        = 41,
  LLVMAddrSpaceCast  = 60,
  LLVMICmp           = 42,
  LLVMFCmp           = 43,
  LLVMPHI            = 44,
  LLVMCall           = 45,
  LLVMSelect         = 46,
  LLVMUserOp1        = 47,
  LLVMUserOp2        = 48,
  LLVMVAArg          = 49,
  LLVMExtractElement = 50,
  LLVMInsertElement  = 51,
  LLVMShuffleVector  = 52,
  LLVMExtractValue   = 53,
  LLVMInsertValue    = 54,
  LLVMFreeze         = 68,
  LLVMFence          = 55,
  LLVMAtomicCmpXchg  = 56,
  LLVMAtomicRMW      = 57,
  LLVMResume         = 58,
  LLVMLandingPad     = 59,
  LLVMCleanupRet     = 61,
  LLVMCatchRet       = 62,
  LLVMCatchPad       = 63,
  LLVMCleanupPad     = 64,
  LLVMCatchSwitch    = 65
} LLVMOpcode;
typedef enum {
  LLVMVoidTypeKind = 0,     
  LLVMHalfTypeKind = 1,     
  LLVMFloatTypeKind = 2,    
  LLVMDoubleTypeKind = 3,   
  LLVMX86_FP80TypeKind = 4, 
  LLVMFP128TypeKind = 5, 
  LLVMPPC_FP128TypeKind = 6, 
  LLVMLabelTypeKind = 7,     
  LLVMIntegerTypeKind = 8,   
  LLVMFunctionTypeKind = 9,  
  LLVMStructTypeKind = 10,   
  LLVMArrayTypeKind = 11,    
  LLVMPointerTypeKind = 12,  
  LLVMVectorTypeKind = 13,   
  LLVMMetadataTypeKind = 14, 
  LLVMTokenTypeKind = 16,    
  LLVMScalableVectorTypeKind = 17, 
  LLVMBFloatTypeKind = 18,         
  LLVMX86_AMXTypeKind = 19,        
  LLVMTargetExtTypeKind = 20,      
} LLVMTypeKind;
typedef enum {
  LLVMExternalLinkage,    
  LLVMAvailableExternallyLinkage,
  LLVMLinkOnceAnyLinkage, 
  LLVMLinkOnceODRLinkage, 
  LLVMLinkOnceODRAutoHideLinkage, 
  LLVMWeakAnyLinkage,     
  LLVMWeakODRLinkage,     
  LLVMAppendingLinkage,   
  LLVMInternalLinkage,    
  LLVMPrivateLinkage,     
  LLVMDLLImportLinkage,   
  LLVMDLLExportLinkage,   
  LLVMExternalWeakLinkage,
  LLVMGhostLinkage,       
  LLVMCommonLinkage,      
  LLVMLinkerPrivateLinkage, 
  LLVMLinkerPrivateWeakLinkage 
} LLVMLinkage;
typedef enum {
  LLVMDefaultVisibility,  
  LLVMHiddenVisibility,   
  LLVMProtectedVisibility 
} LLVMVisibility;
typedef enum {
  LLVMNoUnnamedAddr,    
  LLVMLocalUnnamedAddr, 
  LLVMGlobalUnnamedAddr 
} LLVMUnnamedAddr;
typedef enum {
  LLVMDefaultStorageClass   = 0,
  LLVMDLLImportStorageClass = 1, 
  LLVMDLLExportStorageClass = 2  
} LLVMDLLStorageClass;
typedef enum {
  LLVMCCallConv             = 0,
  LLVMFastCallConv          = 8,
  LLVMColdCallConv          = 9,
  LLVMGHCCallConv           = 10,
  LLVMHiPECallConv          = 11,
  LLVMAnyRegCallConv        = 13,
  LLVMPreserveMostCallConv  = 14,
  LLVMPreserveAllCallConv   = 15,
  LLVMSwiftCallConv         = 16,
  LLVMCXXFASTTLSCallConv    = 17,
  LLVMX86StdcallCallConv    = 64,
  LLVMX86FastcallCallConv   = 65,
  LLVMARMAPCSCallConv       = 66,
  LLVMARMAAPCSCallConv      = 67,
  LLVMARMAAPCSVFPCallConv   = 68,
  LLVMMSP430INTRCallConv    = 69,
  LLVMX86ThisCallCallConv   = 70,
  LLVMPTXKernelCallConv     = 71,
  LLVMPTXDeviceCallConv     = 72,
  LLVMSPIRFUNCCallConv      = 75,
  LLVMSPIRKERNELCallConv    = 76,
  LLVMIntelOCLBICallConv    = 77,
  LLVMX8664SysVCallConv     = 78,
  LLVMWin64CallConv         = 79,
  LLVMX86VectorCallCallConv = 80,
  LLVMHHVMCallConv          = 81,
  LLVMHHVMCCallConv         = 82,
  LLVMX86INTRCallConv       = 83,
  LLVMAVRINTRCallConv       = 84,
  LLVMAVRSIGNALCallConv     = 85,
  LLVMAVRBUILTINCallConv    = 86,
  LLVMAMDGPUVSCallConv      = 87,
  LLVMAMDGPUGSCallConv      = 88,
  LLVMAMDGPUPSCallConv      = 89,
  LLVMAMDGPUCSCallConv      = 90,
  LLVMAMDGPUKERNELCallConv  = 91,
  LLVMX86RegCallCallConv    = 92,
  LLVMAMDGPUHSCallConv      = 93,
  LLVMMSP430BUILTINCallConv = 94,
  LLVMAMDGPULSCallConv      = 95,
  LLVMAMDGPUESCallConv      = 96
} LLVMCallConv;
typedef enum {
  LLVMArgumentValueKind,
  LLVMBasicBlockValueKind,
  LLVMMemoryUseValueKind,
  LLVMMemoryDefValueKind,
  LLVMMemoryPhiValueKind,
  LLVMFunctionValueKind,
  LLVMGlobalAliasValueKind,
  LLVMGlobalIFuncValueKind,
  LLVMGlobalVariableValueKind,
  LLVMBlockAddressValueKind,
  LLVMConstantExprValueKind,
  LLVMConstantArrayValueKind,
  LLVMConstantStructValueKind,
  LLVMConstantVectorValueKind,
  LLVMUndefValueValueKind,
  LLVMConstantAggregateZeroValueKind,
  LLVMConstantDataArrayValueKind,
  LLVMConstantDataVectorValueKind,
  LLVMConstantIntValueKind,
  LLVMConstantFPValueKind,
  LLVMConstantPointerNullValueKind,
  LLVMConstantTokenNoneValueKind,
  LLVMMetadataAsValueValueKind,
  LLVMInlineAsmValueKind,
  LLVMInstructionValueKind,
  LLVMPoisonValueValueKind,
  LLVMConstantTargetNoneValueKind,
  LLVMConstantPtrAuthValueKind,
} LLVMValueKind;
typedef enum {
  LLVMIntEQ = 32, 
  LLVMIntNE,      
  LLVMIntUGT,     
  LLVMIntUGE,     
  LLVMIntULT,     
  LLVMIntULE,     
  LLVMIntSGT,     
  LLVMIntSGE,     
  LLVMIntSLT,     
  LLVMIntSLE      
} LLVMIntPredicate;
typedef enum {
  LLVMRealPredicateFalse, 
  LLVMRealOEQ,            
  LLVMRealOGT,            
  LLVMRealOGE,            
  LLVMRealOLT,            
  LLVMRealOLE,            
  LLVMRealONE,            
  LLVMRealORD,            
  LLVMRealUNO,            
  LLVMRealUEQ,            
  LLVMRealUGT,            
  LLVMRealUGE,            
  LLVMRealULT,            
  LLVMRealULE,            
  LLVMRealUNE,            
  LLVMRealPredicateTrue   
} LLVMRealPredicate;
typedef enum {
  LLVMLandingPadCatch,    
  LLVMLandingPadFilter    
} LLVMLandingPadClauseTy;
typedef enum {
  LLVMNotThreadLocal = 0,
  LLVMGeneralDynamicTLSModel,
  LLVMLocalDynamicTLSModel,
  LLVMInitialExecTLSModel,
  LLVMLocalExecTLSModel
} LLVMThreadLocalMode;
typedef enum {
  LLVMAtomicOrderingNotAtomic = 0, 
  LLVMAtomicOrderingUnordered = 1, 
  LLVMAtomicOrderingMonotonic = 2, 
  LLVMAtomicOrderingAcquire = 4, 
  LLVMAtomicOrderingRelease = 5, 
  LLVMAtomicOrderingAcquireRelease = 6, 
  LLVMAtomicOrderingSequentiallyConsistent = 7 
} LLVMAtomicOrdering;
typedef enum {
  LLVMAtomicRMWBinOpXchg, 
  LLVMAtomicRMWBinOpAdd,  
  LLVMAtomicRMWBinOpSub,  
  LLVMAtomicRMWBinOpAnd,  
  LLVMAtomicRMWBinOpNand, 
  LLVMAtomicRMWBinOpOr,   
  LLVMAtomicRMWBinOpXor,  
  LLVMAtomicRMWBinOpMax,  
  LLVMAtomicRMWBinOpMin,  
  LLVMAtomicRMWBinOpUMax, 
  LLVMAtomicRMWBinOpUMin, 
  LLVMAtomicRMWBinOpFAdd, 
  LLVMAtomicRMWBinOpFSub, 
  LLVMAtomicRMWBinOpFMax, 
  LLVMAtomicRMWBinOpFMin, 
  LLVMAtomicRMWBinOpUIncWrap, 
  LLVMAtomicRMWBinOpUDecWrap, 
  LLVMAtomicRMWBinOpUSubCond, 
  LLVMAtomicRMWBinOpUSubSat,  
} LLVMAtomicRMWBinOp;
typedef enum {
    LLVMDSError,
    LLVMDSWarning,
    LLVMDSRemark,
    LLVMDSNote
} LLVMDiagnosticSeverity;
typedef enum {
  LLVMInlineAsmDialectATT,
  LLVMInlineAsmDialectIntel
} LLVMInlineAsmDialect;
typedef enum {
  LLVMModuleFlagBehaviorError,
  LLVMModuleFlagBehaviorWarning,
  LLVMModuleFlagBehaviorRequire,
  LLVMModuleFlagBehaviorOverride,
  LLVMModuleFlagBehaviorAppend,
  LLVMModuleFlagBehaviorAppendUnique,
} LLVMModuleFlagBehavior;
enum xxxxxxx{
  LLVMAttributeReturnIndex = 0,
  LLVMAttributeFunctionIndex = -1,
};
typedef enum {
  LLVMTailCallKindNone = 0,
  LLVMTailCallKindTail = 1,
  LLVMTailCallKindMustTail = 2,
  LLVMTailCallKindNoTail = 3,
} LLVMTailCallKind;
enum xxxxxxxx{
  LLVMFastMathAllowReassoc = (1 << 0),
  LLVMFastMathNoNaNs = (1 << 1),
  LLVMFastMathNoInfs = (1 << 2),
  LLVMFastMathNoSignedZeros = (1 << 3),
  LLVMFastMathAllowReciprocal = (1 << 4),
  LLVMFastMathAllowContract = (1 << 5),
  LLVMFastMathApproxFunc = (1 << 6),
  LLVMFastMathNone = 0,
  LLVMFastMathAll = LLVMFastMathAllowReassoc | LLVMFastMathNoNaNs |
                    LLVMFastMathNoInfs | LLVMFastMathNoSignedZeros |
                    LLVMFastMathAllowReciprocal | LLVMFastMathAllowContract |
                    LLVMFastMathApproxFunc,
};
enum xxxxxxxxx{
  LLVMGEPFlagInBounds = (1 << 0),
  LLVMGEPFlagNUSW = (1 << 1),
  LLVMGEPFlagNUW = (1 << 2),
};
void LLVMShutdown(void);
void LLVMGetVersion(unsigned *Major, unsigned *Minor, unsigned *Patch);
char *LLVMCreateMessage(const char *Message);
void LLVMDisposeMessage(char *Message);