Packages_2024/llvm-project_20.1.2/llvm/Core.inc

{$IFDEF read_interface}


type
  PLLVMOpcode = ^TLLVMOpcode;
  TLLVMOpcode = longint;
const
  LLVMRet = 1;
  LLVMBr = 2;
  LLVMSwitch = 3;
  LLVMIndirectBr = 4;
  LLVMInvoke = 5;
  LLVMUnreachable = 7;
  LLVMCallBr = 67;
  LLVMFNeg = 66;
  LLVMAdd = 8;
  LLVMFAdd = 9;
  LLVMSub = 10;
  LLVMFSub = 11;
  LLVMMul = 12;
  LLVMFMul = 13;
  LLVMUDiv = 14;
  LLVMSDiv = 15;
  LLVMFDiv = 16;
  LLVMURem = 17;
  LLVMSRem = 18;
  LLVMFRem = 19;
  LLVMShl = 20;
  LLVMLShr = 21;
  LLVMAShr = 22;
  LLVMAnd = 23;
  LLVMOr = 24;
  LLVMXor = 25;
  LLVMAlloca = 26;
  LLVMLoad = 27;
  LLVMStore = 28;
  LLVMGetElementPtr = 29;
  LLVMTrunc = 30;
  LLVMZExt = 31;
  LLVMSExt = 32;
  LLVMFPToUI = 33;
  LLVMFPToSI = 34;
  LLVMUIToFP = 35;
  LLVMSIToFP = 36;
  LLVMFPTrunc = 37;
  LLVMFPExt = 38;
  LLVMPtrToInt = 39;
  LLVMIntToPtr = 40;
  LLVMBitCast = 41;
  LLVMAddrSpaceCast = 60;
  LLVMICmp = 42;
  LLVMFCmp = 43;
  LLVMPHI = 44;
  LLVMCall = 45;
  LLVMSelect = 46;
  LLVMUserOp1 = 47;
  LLVMUserOp2 = 48;
  LLVMVAArg = 49;
  LLVMExtractElement = 50;
  LLVMInsertElement = 51;
  LLVMShuffleVector = 52;
  LLVMExtractValue = 53;
  LLVMInsertValue = 54;
  LLVMFreeze = 68;
  LLVMFence = 55;
  LLVMAtomicCmpXchg = 56;
  LLVMAtomicRMW = 57;
  LLVMResume = 58;
  LLVMLandingPad = 59;
  LLVMCleanupRet = 61;
  LLVMCatchRet = 62;
  LLVMCatchPad = 63;
  LLVMCleanupPad = 64;
  LLVMCatchSwitch = 65;

type
  PLLVMTypeKind = ^TLLVMTypeKind;
  TLLVMTypeKind = longint;
const
  LLVMVoidTypeKind = 0;
  LLVMHalfTypeKind = 1;
  LLVMFloatTypeKind = 2;
  LLVMDoubleTypeKind = 3;
  LLVMX86_FP80TypeKind = 4;
  LLVMFP128TypeKind = 5;
  LLVMPPC_FP128TypeKind = 6;
  LLVMLabelTypeKind = 7;
  LLVMIntegerTypeKind = 8;
  LLVMFunctionTypeKind = 9;
  LLVMStructTypeKind = 10;
  LLVMArrayTypeKind = 11;
  LLVMPointerTypeKind = 12;
  LLVMVectorTypeKind = 13;
  LLVMMetadataTypeKind = 14;
  LLVMTokenTypeKind = 16;
  LLVMScalableVectorTypeKind = 17;
  LLVMBFloatTypeKind = 18;
  LLVMX86_AMXTypeKind = 19;
  LLVMTargetExtTypeKind = 20;

type
  PLLVMLinkage = ^TLLVMLinkage;
  TLLVMLinkage = longint;
const
  LLVMExternalLinkage = 0;
  LLVMAvailableExternallyLinkage = 1;
  LLVMLinkOnceAnyLinkage = 2;
  LLVMLinkOnceODRLinkage = 3;
  LLVMLinkOnceODRAutoHideLinkage = 4;
  LLVMWeakAnyLinkage = 5;
  LLVMWeakODRLinkage = 6;
  LLVMAppendingLinkage = 7;
  LLVMInternalLinkage = 8;
  LLVMPrivateLinkage = 9;
  LLVMDLLImportLinkage = 10;
  LLVMDLLExportLinkage = 11;
  LLVMExternalWeakLinkage = 12;
  LLVMGhostLinkage = 13;
  LLVMCommonLinkage = 14;
  LLVMLinkerPrivateLinkage = 15;
  LLVMLinkerPrivateWeakLinkage = 16;

type
  PLLVMVisibility = ^TLLVMVisibility;
  TLLVMVisibility = longint;
const
  LLVMDefaultVisibility = 0;
  LLVMHiddenVisibility = 1;
  LLVMProtectedVisibility = 2;

type
  PLLVMUnnamedAddr = ^TLLVMUnnamedAddr;
  TLLVMUnnamedAddr = longint;
const
  LLVMNoUnnamedAddr = 0;
  LLVMLocalUnnamedAddr = 1;
  LLVMGlobalUnnamedAddr = 2;

type
  PLLVMDLLStorageClass = ^TLLVMDLLStorageClass;
  TLLVMDLLStorageClass = longint;
const
  LLVMDefaultStorageClass = 0;
  LLVMDLLImportStorageClass = 1;
  LLVMDLLExportStorageClass = 2;

type
  PLLVMCallConv = ^TLLVMCallConv;
  TLLVMCallConv = longint;
const
  LLVMCCallConv = 0;
  LLVMFastCallConv = 8;
  LLVMColdCallConv = 9;
  LLVMGHCCallConv = 10;
  LLVMHiPECallConv = 11;
  LLVMAnyRegCallConv = 13;
  LLVMPreserveMostCallConv = 14;
  LLVMPreserveAllCallConv = 15;
  LLVMSwiftCallConv = 16;
  LLVMCXXFASTTLSCallConv = 17;
  LLVMX86StdcallCallConv = 64;
  LLVMX86FastcallCallConv = 65;
  LLVMARMAPCSCallConv = 66;
  LLVMARMAAPCSCallConv = 67;
  LLVMARMAAPCSVFPCallConv = 68;
  LLVMMSP430INTRCallConv = 69;
  LLVMX86ThisCallCallConv = 70;
  LLVMPTXKernelCallConv = 71;
  LLVMPTXDeviceCallConv = 72;
  LLVMSPIRFUNCCallConv = 75;
  LLVMSPIRKERNELCallConv = 76;
  LLVMIntelOCLBICallConv = 77;
  LLVMX8664SysVCallConv = 78;
  LLVMWin64CallConv = 79;
  LLVMX86VectorCallCallConv = 80;
  LLVMHHVMCallConv = 81;
  LLVMHHVMCCallConv = 82;
  LLVMX86INTRCallConv = 83;
  LLVMAVRINTRCallConv = 84;
  LLVMAVRSIGNALCallConv = 85;
  LLVMAVRBUILTINCallConv = 86;
  LLVMAMDGPUVSCallConv = 87;
  LLVMAMDGPUGSCallConv = 88;
  LLVMAMDGPUPSCallConv = 89;
  LLVMAMDGPUCSCallConv = 90;
  LLVMAMDGPUKERNELCallConv = 91;
  LLVMX86RegCallCallConv = 92;
  LLVMAMDGPUHSCallConv = 93;
  LLVMMSP430BUILTINCallConv = 94;
  LLVMAMDGPULSCallConv = 95;
  LLVMAMDGPUESCallConv = 96;

type
  PLLVMValueKind = ^TLLVMValueKind;
  TLLVMValueKind = longint;
const
  LLVMArgumentValueKind = 0;
  LLVMBasicBlockValueKind = 1;
  LLVMMemoryUseValueKind = 2;
  LLVMMemoryDefValueKind = 3;
  LLVMMemoryPhiValueKind = 4;
  LLVMFunctionValueKind = 5;
  LLVMGlobalAliasValueKind = 6;
  LLVMGlobalIFuncValueKind = 7;
  LLVMGlobalVariableValueKind = 8;
  LLVMBlockAddressValueKind = 9;
  LLVMConstantExprValueKind = 10;
  LLVMConstantArrayValueKind = 11;
  LLVMConstantStructValueKind = 12;
  LLVMConstantVectorValueKind = 13;
  LLVMUndefValueValueKind = 14;
  LLVMConstantAggregateZeroValueKind = 15;
  LLVMConstantDataArrayValueKind = 16;
  LLVMConstantDataVectorValueKind = 17;
  LLVMConstantIntValueKind = 18;
  LLVMConstantFPValueKind = 19;
  LLVMConstantPointerNullValueKind = 20;
  LLVMConstantTokenNoneValueKind = 21;
  LLVMMetadataAsValueValueKind = 22;
  LLVMInlineAsmValueKind = 23;
  LLVMInstructionValueKind = 24;
  LLVMPoisonValueValueKind = 25;
  LLVMConstantTargetNoneValueKind = 26;
  LLVMConstantPtrAuthValueKind = 27;

type
  PLLVMIntPredicate = ^TLLVMIntPredicate;
  TLLVMIntPredicate = longint;
const
  LLVMIntEQ = 32;
  LLVMIntNE = 33;
  LLVMIntUGT = 34;
  LLVMIntUGE = 35;
  LLVMIntULT = 36;
  LLVMIntULE = 37;
  LLVMIntSGT = 38;
  LLVMIntSGE = 39;
  LLVMIntSLT = 40;
  LLVMIntSLE = 41;

type
  PLLVMRealPredicate = ^TLLVMRealPredicate;
  TLLVMRealPredicate = longint;
const
  LLVMRealPredicateFalse = 0;
  LLVMRealOEQ = 1;
  LLVMRealOGT = 2;
  LLVMRealOGE = 3;
  LLVMRealOLT = 4;
  LLVMRealOLE = 5;
  LLVMRealONE = 6;
  LLVMRealORD = 7;
  LLVMRealUNO = 8;
  LLVMRealUEQ = 9;
  LLVMRealUGT = 10;
  LLVMRealUGE = 11;
  LLVMRealULT = 12;
  LLVMRealULE = 13;
  LLVMRealUNE = 14;
  LLVMRealPredicateTrue = 15;

type
  PLLVMLandingPadClauseTy = ^TLLVMLandingPadClauseTy;
  TLLVMLandingPadClauseTy = longint;
const
  LLVMLandingPadCatch = 0;
  LLVMLandingPadFilter = 1;

type
  PLLVMThreadLocalMode = ^TLLVMThreadLocalMode;
  TLLVMThreadLocalMode = longint;
const
  LLVMNotThreadLocal = 0;
  LLVMGeneralDynamicTLSModel = 1;
  LLVMLocalDynamicTLSModel = 2;
  LLVMInitialExecTLSModel = 3;
  LLVMLocalExecTLSModel = 4;

type
  PLLVMAtomicOrdering = ^TLLVMAtomicOrdering;
  TLLVMAtomicOrdering = longint;
const
  LLVMAtomicOrderingNotAtomic = 0;
  LLVMAtomicOrderingUnordered = 1;
  LLVMAtomicOrderingMonotonic = 2;
  LLVMAtomicOrderingAcquire = 4;
  LLVMAtomicOrderingRelease = 5;
  LLVMAtomicOrderingAcquireRelease = 6;
  LLVMAtomicOrderingSequentiallyConsistent = 7;

type
  PLLVMAtomicRMWBinOp = ^TLLVMAtomicRMWBinOp;
  TLLVMAtomicRMWBinOp = longint;
const
  LLVMAtomicRMWBinOpXchg = 0;
  LLVMAtomicRMWBinOpAdd = 1;
  LLVMAtomicRMWBinOpSub = 2;
  LLVMAtomicRMWBinOpAnd = 3;
  LLVMAtomicRMWBinOpNand = 4;
  LLVMAtomicRMWBinOpOr = 5;
  LLVMAtomicRMWBinOpXor = 6;
  LLVMAtomicRMWBinOpMax = 7;
  LLVMAtomicRMWBinOpMin = 8;
  LLVMAtomicRMWBinOpUMax = 9;
  LLVMAtomicRMWBinOpUMin = 10;
  LLVMAtomicRMWBinOpFAdd = 11;
  LLVMAtomicRMWBinOpFSub = 12;
  LLVMAtomicRMWBinOpFMax = 13;
  LLVMAtomicRMWBinOpFMin = 14;
  LLVMAtomicRMWBinOpUIncWrap = 15;
  LLVMAtomicRMWBinOpUDecWrap = 16;
  LLVMAtomicRMWBinOpUSubCond = 17;
  LLVMAtomicRMWBinOpUSubSat = 18;

type
  PLLVMDiagnosticSeverity = ^TLLVMDiagnosticSeverity;
  TLLVMDiagnosticSeverity = longint;
const
  LLVMDSError = 0;
  LLVMDSWarning = 1;
  LLVMDSRemark = 2;
  LLVMDSNote = 3;

type
  PLLVMInlineAsmDialect = ^TLLVMInlineAsmDialect;
  TLLVMInlineAsmDialect = longint;
const
  LLVMInlineAsmDialectATT = 0;
  LLVMInlineAsmDialectIntel = 1;

type
  PLLVMModuleFlagBehavior = ^TLLVMModuleFlagBehavior;
  TLLVMModuleFlagBehavior = longint;
const
  LLVMModuleFlagBehaviorError = 0;
  LLVMModuleFlagBehaviorWarning = 1;
  LLVMModuleFlagBehaviorRequire = 2;
  LLVMModuleFlagBehaviorOverride = 3;
  LLVMModuleFlagBehaviorAppend = 4;
  LLVMModuleFlagBehaviorAppendUnique = 5;

const
  LLVMAttributeReturnIndex = 0;
  LLVMAttributeFunctionIndex = -(1);

type
  PLLVMAttributeIndex = ^TLLVMAttributeIndex;
  TLLVMAttributeIndex = dword;

type
  PLLVMTailCallKind = ^TLLVMTailCallKind;
  TLLVMTailCallKind = longint;
const
  LLVMTailCallKindNone = 0;
  LLVMTailCallKindTail = 1;
  LLVMTailCallKindMustTail = 2;
  LLVMTailCallKindNoTail = 3;

const
  LLVMFastMathAllowReassoc = 1 shl 0;
  LLVMFastMathNoNaNs = 1 shl 1;
  LLVMFastMathNoInfs = 1 shl 2;
  LLVMFastMathNoSignedZeros = 1 shl 3;
  LLVMFastMathAllowReciprocal = 1 shl 4;
  LLVMFastMathAllowContract = 1 shl 5;
  LLVMFastMathApproxFunc = 1 shl 6;
  LLVMFastMathNone = 0;
  LLVMFastMathAll = LLVMFastMathAllowReassoc or LLVMFastMathNoNaNs or LLVMFastMathNoInfs or LLVMFastMathNoSignedZeros or LLVMFastMathAllowReciprocal or LLVMFastMathAllowContract or LLVMFastMathApproxFunc;

type
  PLLVMFastMathFlags = ^TLLVMFastMathFlags;
  TLLVMFastMathFlags = dword;

const
  LLVMGEPFlagInBounds = 1 shl 0;
  LLVMGEPFlagNUSW = 1 shl 1;
  LLVMGEPFlagNUW = 1 shl 2;

type
  PLLVMGEPNoWrapFlags = ^TLLVMGEPNoWrapFlags;
  TLLVMGEPNoWrapFlags = dword;

procedure LLVMShutdown; cdecl; external libllvm;
procedure LLVMGetVersion(Major: Pdword; Minor: Pdword; Patch: Pdword); cdecl; external libllvm;
function LLVMCreateMessage(Message: pchar): pchar; cdecl; external libllvm;
procedure LLVMDisposeMessage(Message: pchar); cdecl; external libllvm;

type
  TLLVMDiagnosticHandler = procedure(para1: TLLVMDiagnosticInfoRef; para2: pointer); cdecl;
  TLLVMYieldCallback = procedure(para1: TLLVMContextRef; para2: pointer); cdecl;
